[metadata]
name = asdf_zarr
description = TODO
long_description = TODO
author = TODO
version = 1.1.0
license = BSD-3-Clause

[options]
zip_safe = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    jsonschema>=3.0.2
    asdf>=2.8
    psutil>=5.7.2
    numpy>=1.16
    zarr
package_dir =
    =src
packages = find:

[options.entry_points]
asdf.extensions =
    asdf_zarr = asdf_zarr.extensions:get_extensions

[options.packages.find]
where = src
