[metadata]
name = asdf_zarr
description = TODO
long_description = TODO
author = TODO
version = 0.0.1
license = BSD-3-Clause

[options]
zip_safe = True
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    asdf>=2.8
    zarr
    fsspec
package_dir =
    =src
packages = find:

[options.entry_points]
asdf.extensions =
    asdf_zarr = asdf_zarr.extensions:get_extensions

[options.packages.find]
where = src
